--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "flexboxgrid": "^6.3.1",
     "ngx-swiper-wrapper": "^10.0.0",
     "rxjs": "~6.6.0",
     "swiper": "^7.0.6",
